<resources>
    <string name="app_name">tema2_ejercicios</string>
    <string name="firstTextViewEj1">Primera Etiqueta</string>
    <string name="secondTextViewEj1">Segunda Etiqueta</string>
    <string name="textViewEj2">Ejemplo de etiqueta - Ejercicio 2</string>
    <string name="textViewEj3">Contador: </string>
    <string name="textViewNameEj4">Nombre:</string>
    <string name="editTextNameEj4">Nombre</string>
    <string name="textViewLastNameEj4">Apellidos:</string>
    <string name="editTextLastNameEj4">Apellidos</string>
    <string name="textViewAddressEj4">Dirección:</string>
    <string name="editTextAddressEj4">Dirección</string>
    <string name="textViewEmailEj4">E-mail:</string>
    <string name="editTextEmailEj4">Email</string>
    <string name="buttonEj4">Check</string>
    <string name="buttonEj5">Cambia color</string>
    <string name="checkbox1Ej8">DAM</string>
    <string name="checkbox2Ej8">DAW</string>
    <string name="checkbox3Ej8">ASIR</string>
    <string name="buttonEj8">Pulsame!</string>
    <string name="resultEj8">Los estudios seleccionados son: </string>
    <string name="buttonEj10">Llamar</string>
    <string name="button2Ej11">Página de Google</string>
    <string name="button3Ej11">Abrir mapa</string>
    <string name="buttonEjemplo11">Enviar correo</string>
    <string name="editTextURLEj13">URL</string>
    <string name="OK">OK</string>
    <string name="button3Ej13">Volver</string>
    <string name="button114">Ejercicio 1</string>
    <string name="button214">Ejercicio 2</string>
    <string name="button314">Ejercicio 3</string>
    <string name="Button4Ej14">Ejercicio 4</string>
    <string name="button5Ej14">Ejercicio 5</string>
    <string name="button6Ej14">Ejercicio 6</string>
    <string name="button1Ej6">1</string>
    <string name="button2Ej6">2</string>
    <string name="button3Ej6">3</string>
    <string name="button4Ej6">4</string>
    <string name="button6Ej6">6</string>
    <string name="button5Ej6">5</string>
    <string name="button7Ej6">7</string>
    <string name="button8Ej6">8</string>
    <string name="button9Ej6">9</string>
    <string name="button10Ej6">0</string>
    <string name="button11Ej6">+</string>
    <string name="button12Ej6">-</string>
    <string name="button13Ej6">*</string>
    <string name="button14Ej6">/</string>
    <string name="button15Ej6">=</string>
</resources>
