<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio6">

    <Button
        android:text="@string/button1Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button1Ej6"
        android:layout_alignBottom="@+id/button3Ej6"
        android:tag="1"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button2Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1Ej6"
        android:layout_toEndOf="@+id/button1Ej6"
        android:layout_marginStart="11dp"
        android:id="@+id/button2Ej6"
        android:tag="2"
        android:onClick="getOperando" />


    <Button
        android:text="@string/button3Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/button3Ej6"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button2Ej6"
        android:tag="3"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button4Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1Ej6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/button4Ej6"
        android:tag="4"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button5Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4Ej6"
        android:layout_toStartOf="@+id/button3Ej6"
        android:id="@+id/button5Ej6"
        android:tag="5"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button6Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button5Ej6"
        android:layout_alignEnd="@+id/button3Ej6"
        android:id="@+id/button6Ej6"
        android:tag="6"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button7Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7Ej6"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/button4Ej6"
        android:layout_alignParentStart="true"
        android:tag="7"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button8Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7Ej6"
        android:layout_alignEnd="@+id/button5Ej6"
        android:id="@+id/button8Ej6"
        android:tag="8"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button9Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button8Ej6"
        android:layout_alignStart="@+id/button6Ej6"
        android:id="@+id/button9Ej6"
        android:tag="9"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button10Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7Ej6"
        android:layout_alignEnd="@+id/button7Ej6"
        android:layout_marginTop="18dp"
        android:id="@+id/button10Ej6"
        android:tag="0"
        android:onClick="getOperando" />

    <Button
        android:text="@string/button11Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button10Ej6"
        android:layout_alignEnd="@+id/button8Ej6"
        android:id="@+id/button11Ej6"
        android:tag="1"
        android:onClick="getOperador" />

    <Button
        android:text="@string/button12Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button11Ej6"
        android:layout_alignStart="@+id/button9Ej6"
        android:id="@+id/button12Ej6"
        android:tag="2"
        android:onClick="getOperador" />

    <Button
        android:text="@string/button13Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10Ej6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/button13Ej6"
        android:tag="3"
        android:onClick="getOperador" />

    <Button
        android:text="@string/button14Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button13Ej6"
        android:layout_alignStart="@+id/button11Ej6"
        android:id="@+id/button14Ej6"
        android:tag="4"
        android:onClick="getOperador" />

    <Button
        android:text="@string/button15Ej6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button14Ej6"
        android:layout_alignStart="@+id/button12Ej6"
        android:id="@+id/button15Ej6"
        android:tag="5"
        android:onClick="getOperador" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13Ej6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/resultEj6" />
</RelativeLayout>
