<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio14"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio14">

    <Button
        android:text="@string/button114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button1Ej14"
        android:onClick="openActivity"
        android:tag="arey.es.tema2_ejercicios.Ejercicio1" />

    <Button
        android:text="@string/button214"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1Ej14"
        android:layout_alignParentStart="true"
        android:id="@+id/button2Ej14"
        android:onClick="openActivity"
        android:tag="arey.es.tema2_ejercicios.Ejercicio2" />

    <Button
        android:text="@string/Button4Ej14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3Ej14"
        android:layout_alignParentStart="true"
        android:id="@+id/button4Ej14"
        android:onClick="openActivity (Ejercicio14)"
        android:tag="arey.es.tema2_ejercicios.Ejercicio4" />

    <Button
        android:text="@string/button314"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3Ej14"
        android:layout_below="@+id/button2Ej14"
        android:layout_alignParentStart="true"
        android:onClick="openActivity"
        android:tag="arey.es.tema2_ejercicios.Ejercicio3" />

    <Button
        android:text="@string/button5Ej14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4Ej14"
        android:layout_alignParentStart="true"
        android:id="@+id/button5Ej14"
        android:onClick="openActivity"
        android:tag="arey.es.tema2_ejercicios.Ejercicio5"/>

    <Button
        android:text="@string/button6Ej14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6Ej14"
        android:layout_below="@+id/button5Ej14"
        android:layout_alignParentStart="true"
        android:onClick="openActivity"
        android:tag="arey.es.tema2_ejercicios.Ejercicio6"/>
</RelativeLayout>
