<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio8">

    <CheckBox
        android:text="@string/checkbox1Ej8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBox1Ej8" />

    <CheckBox
        android:text="@string/checkbox2Ej8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1Ej8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/checkBox2Ej8" />

    <CheckBox
        android:text="@string/checkbox3Ej8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2Ej8"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/checkBox3Ej8" />

    <Button
        android:text="@string/buttonEj8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkBox2Ej8"
        android:layout_toEndOf="@+id/checkBox2Ej8"
        android:layout_marginStart="72dp"
        android:id="@+id/buttonEj8"
        android:onClick="printStudies" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3Ej8"
        android:layout_toStartOf="@+id/buttonEj8"
        android:layout_marginTop="27dp"
        android:id="@+id/textViewEj8" />
</RelativeLayout>
