<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio9">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/checkbox1Ej8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1Ej9"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/checkbox2Ej8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2Ej9"
            android:layout_below="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/checkbox3Ej8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioButton3Ej9" />

    </RadioGroup>

    <Button
        android:text="@string/buttonEj8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEj9"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEj9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewEj9" />

</RelativeLayout>
