<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio11">

    <Button
        android:text="@string/buttonEj10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button1Ej11"
        android:onClick="call" />

    <Button
        android:text="@string/button2Ej11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1Ej11"
        android:layout_marginTop="14dp"
        android:id="@+id/button2Ej11"
        android:onClick="openGoogle" />

    <Button
        android:text="@string/button3Ej11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2Ej11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/button3Ej11"
        android:onClick="openMap" />
</RelativeLayout>
