<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arey.es.tema2_ejercicios.Ejercicio12">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText1Ej12"
        tools:ignore="LabelFor"
        android:hint="@string/editTextNameEj4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2Ej12"
        android:layout_below="@+id/editText1Ej12"
        android:layout_alignParentStart="true"
        tools:ignore="LabelFor"
        android:hint="@string/editTextLastNameEj4" />

    <Button
        android:text="@string/buttonEj8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2Ej12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/button2"
        android:onClick="callHelloWorldActivity" />
</RelativeLayout>
